@@ -1,3 +1,8 @@
+Wed May 14 16:50:30 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
+
+	* lib/adlint/cpp/eval.rb : Add checkpoints to ease preprocessing error
+	  investigation.
+
 Sat May 10 22:31:55 2014  Yutaka Yanoh  <yanoh@users.sourceforge.net>
 
 	* release.ga : 3.2.14
